test/log/reduction/vardotacc_vv_i32.txt
vardotacc_vv_i32.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vardotacc_vv_i32.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vardotacc_vv_i32.c:30:6: warning: no previous prototype for 'vardotacc_vv_i32_golden' [-Wmissing-prototypes]
   30 | void vardotacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_i32.c: In function 'vardotacc_vv_i32_golden':
vardotacc_vv_i32.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vardotacc_vv_i32.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vardotacc_vv_i32.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vardotacc_vv_i32.c: In function 'main':
vardotacc_vv_i32.c:37:15: warning: declaration of 'a' shadows a parameter [-Wshadow]
   37 |     int64x8_t a;
      |               ^
vardotacc_vv_i32.c:30:39: note: shadowed declaration is here
   30 | void vardotacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                              ~~~~~~~~~^
vardotacc_vv_i32.c:38:16: warning: declaration of 'b' shadows a parameter [-Wshadow]
   38 |     int32x16_t b;
      |                ^
vardotacc_vv_i32.c:30:50: note: shadowed declaration is here
   30 | void vardotacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                         ~~~~~~~~~^
vardotacc_vv_i32.c:39:16: warning: declaration of 'c' shadows a parameter [-Wshadow]
   39 |     int32x16_t c;
      |                ^
vardotacc_vv_i32.c:30:61: note: shadowed declaration is here
   30 | void vardotacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                                    ~~~~~~~~~^
vardotacc_vv_i32.c:47:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   47 |     int64_t exp_result[8] = {0};
      |             ^~~~~~~~~~
vardotacc_vv_i32.c:30:72: note: shadowed declaration is here
   30 | void vardotacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                                               ~~~~~~~~~^~~~~~~~~~
vardotacc_vv_i32.c:52:38: error: macro "data_init_scalar" requires 3 arguments, but only 2 given
   52 |     data_init_scalar(accum, exp_accum);
      |                                      ^
vardotacc_vv_i32.c:11: note: macro "data_init_scalar" defined here
   11 |  #define data_init_scalar(a, b, threshold) \
      | 
vardotacc_vv_i32.c:52:5: error: 'data_init_scalar' undeclared (first use in this function)
   52 |     data_init_scalar(accum, exp_accum);
      |     ^~~~~~~~~~~~~~~~
vardotacc_vv_i32.c:52:5: note: each undeclared identifier is reported only once for each function it appears in
vardotacc_vv_i32.c:55:47: error: incompatible type for argument 4 of 'vardotacc_vv_i32_golden'
   55 |     vardotacc_vv_i32_golden(exp_a,exp_b,exp_c,exp_accum,exp_result);
      |                                               ^~~~~~~~~
      |                                               |
      |                                               enum ACCUM
vardotacc_vv_i32.c:30:72: note: expected 'int64_t *' {aka 'long long int *'} but argument is of type 'enum ACCUM'
   30 | void vardotacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                                               ~~~~~~~~~^~~~~~~~~~
vardotacc_vv_i32.c:55:5: error: too many arguments to function 'vardotacc_vv_i32_golden'
   55 |     vardotacc_vv_i32_golden(exp_a,exp_b,exp_c,exp_accum,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_i32.c:30:6: note: declared here
   30 | void vardotacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_i32.c:63:43: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'long long int' [-Wformat=]
   63 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                          ~^                             ~~~~~~~~~
      |                                           |                                   |
      |                                           unsigned int                        long long int
      |                                          %llx
vardotacc_vv_i32.c:63:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int64_t' {aka 'long long int'} [-Wformat=]
   63 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int64_t {aka long long int}
      |                                                               %llx
vardotacc_vv_i32.c: In function 'vardotacc_vv_i32_golden':
vardotacc_vv_i32.c:78:1: error: expected declaration or statement at end of input
   78 | }
      | ^
vardotacc_vv_i32.c:30:39: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vardotacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                              ~~~~~~~~~^
vardotacc_vv_i32.c:30:50: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vardotacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                         ~~~~~~~~~^
vardotacc_vv_i32.c:30:61: warning: unused parameter 'c' [-Wunused-parameter]
   30 | void vardotacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                                    ~~~~~~~~~^
vardotacc_vv_i32.c:30:72: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vardotacc_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                                               ~~~~~~~~~^~~~~~~~~~
At top level:
vardotacc_vv_i32.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_i32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vardotacc_vv_i32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vardotacc_vv_i32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_i32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed